@@ -16,6 +16,10 @@
 #ssl_cipher = TLSv13
 #ssl_cipher = !SSLv3:!TLSv11
 
+# By default, any client can use this plugin features.
+# Set it to "yes" to only trust clients defined in the httpd-trust agent configuration.
+#forbid_not_trusted = no
+
 # You should create and define you specific parameter in the following
 # included configuration file to override any default.
 # For example just set "disabled = no" in it to enable the plugin
